Add style to table

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -12,3 +12,14 @@
     margin: 1rem 0;
   }
 }
+
+.my-table {
+    tbody {
+	tr {
+	    td {
+		background: none;
+		border: none;
+  	    }
+	}
+    }
+}
