Add style to table

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -19,6 +19,11 @@
 	    td {
 		background: none;
 		border: none;
+
+		&:first-child {
+		    width: 100%;
+		    vertical-align:top	
+		}
   	    }
 	}
     }
