Add style to table

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -25,11 +25,9 @@
 
 		&:first-child { 
 		  width: calc(100% - 250px);
-		  vertical-align:top  	
+		  vertical-align:top;	
 		}
   	    }
 	}
     }
 }
-
-table:not(.rouge-table)
