--- a/_includes/img-left-box.html
+++ b/_includes/img-left-box.html
@@ -11,7 +11,7 @@
 <div class="container">
   <div class="row gy-0">
     <div class="col-12 col-sm-12">
-      <h3><center>{{ include.title }}</center></h3>
+      <strong><center>{{ include.title }}</center></strong>
     </div>
     <div class="col-12 col-sm-9">
       <img src="{{ include.path }}" alt="{{ include.alt }}" loading="lazy">
