Added coping struggles by treatment and gender

--- a/_includes/img-left.html
+++ b/_includes/img-left.html
@@ -4,8 +4,7 @@
     <br/><br/>
   </div>
   <div>
-    <h3>{{ include.title }}</h3>
-    {{ include.description | markdownify }}
+    <img src="{{ include.table}}">
     <br/><br/>
   </div>
   <div><br></div>
