--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -31,3 +31,17 @@
 	}
     }
 }
+
+#certifications .column {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+#certifications .row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
